marketing/corporate/deploy/k8s/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: corporate-ingress
spec:
  rules:
    - host: nafuralabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: corporate-web
                port:
                  number: 80
    - host: www.nafuralabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: corporate-web
                port:
                  number: 80
